[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-reliability-engine"
version = "0.1.0"
description = "Reliability middleware for LLM structured outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["llm", "structured-output", "pydantic", "json", "reliability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "json-repair>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/llm-reliability-engine"
Repository = "https://github.com/your-org/llm-reliability-engine"
Issues = "https://github.com/your-org/llm-reliability-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_reliability_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["llm_reliability_engine"]

[tool.black]
line-length = 88
target-version = ["py310"]
